--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 # Site settings
 title: Michal's blog
+
+author :
+  name : Michal Švácha
+  linkedin: michal.svacha
+  stackoverflow: Michal
+
 email: svacha@msn.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
