--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,8 @@
 # Site settings
 title: Michal's blog
-
-author :
-  name : Michal Švácha
-  linkedin: michal.svacha
-  stackoverflow: Michal
-
 email: svacha@msn.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Fourth and hopefully last attempt to have a blog.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://svachmic.github.io" # the base hostname & protocol for your site
 twitter_username: miguelitinho
