--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: kramdown
 highlighter: pygments
 
 ##define base_url for valid usage in sitemap.xml and robots.txt
-#base_url: http://gituser.github.io (or http://example.com)
+base_url: http://svachmic.github.io #(or http://example.com)
 sass:
   sass_dir: _sass
   style: :compressed
@@ -15,7 +15,7 @@ paginate_path: "page:num"
 ##The website description (to be used in meta tags)
 description: Put website description for your home page. (about 50 words or more)
 ##Some frequently used keywords on your website
-keywords: some, relevant, keywords, for, usage, in metatags
+keywords: iOS, UX, Career, Thought of the day
 
 ##define this for disqus comment support
 #disqus: forumname
@@ -26,10 +26,10 @@ keywords: some, relevant, keywords, for, usage, in metatags
 
 ##Some commonly used links
 links:
-  facebook: username
-  twitter: username
-  email: username@gmail.com
-  github: username
+  #facebook: username
+  twitter: miguelitinho
+  email: svacha(at)msn(dot)com
+  github: svachmic
 
 ##put desired image in img/ directory and set the value accordingly. If not defined, a placeholder image will be used.
 about_image: placeholder.jpg
