--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ##The website title
-name: Miguelitinho's pensieve
+name: Michalova myslánka
 ##Markdown processor
 markdown: kramdown
 ##syntax highlighter. change it to pygments
