--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ##The website title
-name: Michalova myslánka
+name: 5. blog
 ##Markdown processor
 markdown: kramdown
 ##syntax highlighter. change it to pygments
@@ -15,7 +15,7 @@ paginate_path: "page:num"
 ##The website description (to be used in meta tags)
 description: Put website description for your home page. (about 50 words or more)
 ##Some frequently used keywords on your website
-keywords: iOS, UX, Career, Thought of the day
+keywords: iOS, UX, Career, Thought of the day, Programming
 
 ##define this for disqus comment support
 #disqus: forumname
