--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ##The website title
-name: Michalova myslánka
+name: 5. blog
 ##Markdown processor
 markdown: kramdown
 ##syntax highlighter. change it to pygments
@@ -13,9 +13,9 @@ sass:
 paginate: 5
 paginate_path: "page:num"
 ##The website description (to be used in meta tags)
-description: Put website description for your home page. (about 50 words or more)
+description: Description of this blog is unfortunately missing (damn!).
 ##Some frequently used keywords on your website
-keywords: iOS, UX, Career, Thought of the day
+keywords: iOS, UX, career, thought of the day, programming
 
 ##define this for disqus comment support
 #disqus: forumname
@@ -35,3 +35,11 @@ links:
 about_image: placeholder.jpg
 ##comment this if you want full width posts with no sidebar
 sidebar: on
+
+tag_page_layout: tag_page
+tag_page_dir: tag
+
+tag_feed_layout: tag_feed
+tag_feed_dir: tag
+
+tag_permalink_style: pretty
