--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ sass:
 paginate: 5
 paginate_path: "page:num"
 ##The website description (to be used in meta tags)
-description: Description of this blog is unfortunately missing (damn!).
+description: Put website description for your home page. (about 50 words or more)
 ##Some frequently used keywords on your website
-keywords: iOS, UX, career, thought of the day, programming
+keywords: iOS, UX, Career, Thought of the day, Programming
 
 ##define this for disqus comment support
 #disqus: forumname
@@ -35,11 +35,3 @@ links:
 about_image: placeholder.jpg
 ##comment this if you want full width posts with no sidebar
 sidebar: on
-
-tag_page_layout: tag_page
-tag_page_dir: tag
-
-tag_feed_layout: tag_feed
-tag_feed_dir: tag
-
-tag_permalink_style: pretty
