--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ sass:
 paginate: 5
 paginate_path: "page:num"
 ##The website description (to be used in meta tags)
-description: Put website description for your home page. (about 50 words or more)
+description: Fifth incarnation of my personal blog. This time it's different...trust me.
 ##Some frequently used keywords on your website
 keywords: iOS, UX, Career, Thought of the day, Programming
 
