--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,34 @@
-##The website title
-name: 5. blog
-##Markdown processor
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+title: 5th blog
+author: Michal Švácha
+claim: Attempting blogging. Again.
+
+description: >
+  Fifth incarnation of my personal blog. This time it's different...trust me.
+keywords: "education, software, programming, czech, career"
+
+baseurl: ""
+url: "http://127.0.0.1:4000"
+
+twitter_username: miguelitinho
+github_username: svachmic
+google_analytics: UA-61928196-1
+
+# Build settings
 markdown: kramdown
-##syntax highlighter. change it to pygments
-highlighter: pygments
-
-##define base_url for valid usage in sitemap.xml and robots.txt
-base_url: http://svachmic.github.io #(or http://example.com)
-sass:
-  sass_dir: _sass
-  style: :compressed
-paginate: 5
-paginate_path: "page:num"
-##The website description (to be used in meta tags)
-description: Fifth incarnation of my personal blog. This time it's different...trust me.
-##Some frequently used keywords on your website
-keywords: iOS, UX, Career, Thought of the day, Programming
-
-##define this for disqus comment support
-#disqus: forumname
-
-##set this to enable google analytics
-#ga_id: analyticsID
-#ga_domain: analyticsDomain
-
-##Some commonly used links
-links:
-  #facebook: username
-  twitter: miguelitinho
-  #email: svacha(at)msn(dot)com
-  github: svachmic
-
-##put desired image in img/ directory and set the value accordingly. If not defined, a placeholder image will be used.
-about_image: placeholder.jpg
-##comment this if you want full width posts with no sidebar
-sidebar: on
+theme: minima
