--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >
 keywords: "education, software, programming, czech, career"
 
 baseurl: ""
-url: "http://127.0.0.1:4000"
+url: "https://svachmic.github.io"
 
 twitter_username: miguelitinho
 github_username: svachmic
